--- a/category.html
+++ b/category.html
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Karma Shop</title>
+	<title>Baiyue</title>
 
 	<!--
             CSS
@@ -28,6 +28,19 @@
 	<link rel="stylesheet" href="css/nouislider.min.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/main.css">
+	<style>
+		.single-product img {
+			width: 100%;
+			height: 250px; /* Fixed height for all product images */
+			object-fit: cover; /* Maintain aspect ratio and cover the container */
+			object-position: center; /* Center the image within the container */
+		}
+		
+		.single-product {
+			height: 100%;
+			margin-bottom: 30px;
+		}
+	</style>
 </head>
 
 <body id="category">
@@ -90,11 +103,11 @@
 	</section>
 	<!-- End Banner Area -->
 	<div class="container" style="margin-bottom: 20px;">
-		<div class="row">
-			<div class="col-xl-9 col-lg-8 col-md-7">
+		<div class="row justify-content-center">
+			<div class="col-12">
 				<!-- Start Best Seller -->
 				<section class="lattest-product-area pb-40 category-list">
-					<div class="row" id="product-container">
+					<div class="row justify-content-center" id="product-container">
 						<!-- Products will be loaded dynamically from data.json -->
 					</div>
 				</section>
@@ -286,9 +299,9 @@
 					
 					// Create HTML for each product
 					const productHTML = `
-						<div class="col-lg-4 col-md-6">
+						<div class="col-lg-4 col-md-6 col-sm-6">
 							<div class="single-product">
-								<img class="img-fluid" src="${productImage}" alt="${product['Product name']}">
+								<img src="${productImage}" alt="${product['Product name']}">
 								<div class="product-details">
 									<h6>${product['Product name']}</h6>
 									<div class="price">
@@ -296,18 +309,6 @@
 										<h6 class="l-through">$${(parseFloat(productPrice.replace('$', '').split('-')[0]) * 1.4).toFixed(2)}</h6>
 									</div>
 									<div class="prd-bottom">
-										<a href="" class="social-info">
-											<span class="ti-bag"></span>
-											<p class="hover-text">add to bag</p>
-										</a>
-										<a href="" class="social-info">
-											<span class="lnr lnr-heart"></span>
-											<p class="hover-text">Wishlist</p>
-										</a>
-										<a href="" class="social-info">
-											<span class="lnr lnr-sync"></span>
-											<p class="hover-text">compare</p>
-										</a>
 										<a href="single-product.html?id=${product.id}" class="social-info">
 											<span class="lnr lnr-move"></span>
 											<p class="hover-text">view more</p>
