--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 					<div class="row single-slide align-items-center d-flex">
 						<div class="col-lg-5 col-md-6">
 							<div class="banner-content">
-								<h1 style="text-align:left; color: #032B44; padding: 10px; font-size: 48px;">BAIYUE</h1>
-							</div>
+								<h1 style="text-align:left; color: #033803; padding: 10px; font-size: 56px; font-weight: 700; transition: all 0.3s ease;" onmouseover="this.style.color='#00c853'; this.style.textShadow='0 0 10px #00c853'" onmouseout="this.style.color='#006400'; this.style.textShadow='none'">BAIYUE</h1>
 						</div>
 					</div>
 				</div>
