--- a/single-product.html
+++ b/single-product.html
@@ -50,7 +50,7 @@
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav ml-auto">
 							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-							<li class="nav-item active"><a class="nav-link" href="category.html">Shop Category</a></li>
+							<li class="nav-item active"><a class="nav-link" href="category.html">Shop Products</a></li>
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 						</ul>
 					</div>
